ignore the xcuserdata folders

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,5 @@ OSX/xcode/shivah/game_files/ac2game.dat
 OSX/xcode/shivah/game_files/audio.vox
 
 OSX/xcode/shivah/game_files/speech.vox
+
+xcuserdata
