--- a/Engine/Makefile-defs.linux
+++ b/Engine/Makefile-defs.linux
@@ -15,9 +15,9 @@ else
   LIBDIR = ../Linux/lib64
   RPATH=lib64
 endif
-override CFLAGS += -O2 -g -fsigned-char -Wfatal-errors -DNDEBUG -DAGS_HAS_CD_AUDIO -DAGS_CASE_SENSITIVE_FILESYSTEM -DALLEGRO_STATICLINK -DLINUX_VERSION -DDISABLE_MPEG_AUDIO -DBUILTIN_PLUGINS -DRTLD_NEXT $(shell pkg-config --cflags freetype2)
+override CFLAGS += -O2 -g -fsigned-char -Wfatal-errors -DNDEBUG -DAGS_HAS_CD_AUDIO -DAGS_CASE_SENSITIVE_FILESYSTEM -DALLEGRO_STATICLINK -DLINUX_VERSION -DDISABLE_MPEG_AUDIO -DAGS_INVERTED_COLOR_ORDER -DBUILTIN_PLUGINS -DRTLD_NEXT $(shell pkg-config --cflags freetype2)
 override CXXFLAGS += -fno-rtti -Wno-write-strings -fpermissive
-LIBS = -rdynamic -lalleg -laldmb -ldumb -Wl,-Bdynamic -ltheoradec -logg 
+LIBS = -rdynamic -lalleg -laldmb -ldumb -Wl,-Bdynamic -ltheoradec -logg -lSDL2 -lGL
 
 ifeq ($(USE_TREMOR), 1)
   LIBS += -lvorbisidec
