--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,5 @@ OSX/xcode/shivah/game_files/audio.vox
 OSX/xcode/shivah/game_files/speech.vox
 
 xcuserdata
+
+OSX/xcode/shivah/Shivah.xcodeproj/project.xcworkspace/xcuserdata/janetcampbell68.xcuserdatad/UserInterfaceState.xcuserstate
