Clearing up odds and ends

--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,17 @@ OSX/xcode/shivah/game_files/speech.vox
 xcuserdata
 
 OSX/xcode/shivah/Shivah.xcodeproj/project.xcworkspace/xcuserdata/janetcampbell68.xcuserdatad/UserInterfaceState.xcuserstate
+
+iOS/xcode/BlackwellConvergence/game/ac2game.dat
+
+iOS/xcode/BlackwellConvergence/game/audio.vox
+
+iOS/xcode/BlackwellConvergence/game/speech.vox
+
+iOS/xcode/BlackwellUnbound/game/ac2game.dat
+
+iOS/xcode/BlackwellUnbound/game/audio.vox
+
+iOS/xcode/BlackwellUnbound/game/speech.vox
+
+iOS/xcode/ags/Gemini Rue.xcodeproj/project.xcworkspace/contents.xcworkspacedata
