--- a/OSX/xcode/unbound/Unbound-Info.plist
+++ b/OSX/xcode/unbound/Unbound-Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleDisplayName</key>
-	<string>Blackwell 1: Legacy</string>
+	<string>Blackwell 2: Unbound</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
