--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,5 @@ OSX/xcode/shivah/Shivah.xcodeproj/project.xcworkspace/xcuserdata/janetcampbell68
 OSX/xcode/legacy/Legacy.xcodeproj/project.xcworkspace/xcuserdata/janetcampbell68.xcuserdatad/UserInterfaceState.xcuserstate
 
 OSX/xcode/legacy/Legacy.xcodeproj/project.xcworkspace/xcuserdata/janetcampbell68.xcuserdatad/UserInterfaceState.xcuserstate
+
+OSX/xcode/golden_wake/game_files no steam.zip
