Added Steam target

--- a/.gitignore
+++ b/.gitignore
@@ -115,3 +115,7 @@ OSX/xcode/legacy/Legacy.xcodeproj/project.xcworkspace/xcuserdata/janetcampbell68
 OSX/xcode/legacy/Legacy.xcodeproj/project.xcworkspace/xcuserdata/janetcampbell68.xcuserdatad/UserInterfaceState.xcuserstate
 
 OSX/xcode/golden_wake/game_files no steam.zip
+
+OSX/xcode/golden_wake/game_files/steam/ac2game.dat.old
+
+OSX/xcode/golden_wakegame_files no steam.zip
