--- a/.gitignore
+++ b/.gitignore
@@ -119,3 +119,7 @@ OSX/xcode/golden_wake/game_files no steam.zip
 OSX/xcode/golden_wake/game_files/steam/ac2game.dat.old
 
 OSX/xcode/golden_wakegame_files no steam.zip
+
+OSX/xcode/legacy/Legacy.xcodeproj/xcuserdata/janetcampbell68.xcuserdatad/xcschemes/xcschememanagement.plist
+
+OSX/xcode/legacy/Legacy.xcodeproj/xcuserdata/janetcampbell68.xcuserdatad/xcschemes/Legacy.xcscheme
