--- a/OSX/lib/FreeType.framework/Versions/A/Resources/Info.plist
+++ b/OSX/lib/FreeType.framework/Versions/A/Resources/Info.plist
@@ -20,5 +20,7 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>2.4.8</string>
+	<key>CFBundleIdentifier</key>
+	<string>org.freetype.freetype</string>
 </dict>
 </plist>
