--- a/OSX/xcode/golden_wake/game_files_demo/acsetup.cfg
+++ b/OSX/xcode/golden_wake/game_files_demo/acsetup.cfg
@@ -1,7 +1,7 @@
 [sound]
 digiid=-1
 midiid=-1
-digiwin=-1
+digiwin=1096302880
 midiwin=-1
 digiindx=0
 midiindx=0
@@ -9,9 +9,13 @@ digiwinindx=0
 midiwinindx=0
 [misc]
 gamecolordepth=32
-defaultres=2
+defaultres=1
 screenres=0
-letterbox=1
+letterbox=0
 defaultgfxdriver=D3D9
 gfxdriver=D3D9
-titletext=Blackwell Legacy v1.7 Setup
+titletext=A Golden Wake Demo Setup
+windowed=0
+refresh=0
+gfxfilter=StdScale4
+sideborders=0
