--- a/OSX/xcode/ags/ags-Info.plist
+++ b/OSX/xcode/ags/ags-Info.plist
@@ -11,13 +11,15 @@
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>co.uk.adventuregamestudio.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>uk.co.adventuregamestudio.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
 	<string>${PRODUCT_NAME}</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
+	<key>CFBundleShortVersionString</key>
+	<string>1.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
