osx: update aspect ratio patch for allegro

--- a/OSX/buildlibs/Makefile
+++ b/OSX/buildlibs/Makefile
@@ -75,7 +75,10 @@ theora: prepare ogg vorbis
 		make && \
 		make install
 
+# - you can add `-DCMAKE_BUILD_TYPE=Debug` to the cmake options but remember it will produce the file `liballeg-debug.a`
+# - to update patch: git diff 4.4.2 > ../ags/OSX/patches/allegro-4.4.2.patch
 allegro: prepare
+	rm -rf $(BUILD)/allegro-4.4.2
 	tar xf $(LIBSRCDIR)/allegro-4.4.2.tar.gz -C $(BUILD)
 	cd $(BUILD)/allegro-4.4.2 && \
 		patch -p1 < $(PATCHESDIR)/allegro-4.4.2.patch && \
