sdl2: small changes to make allegro/sdl2 port go easier

--- a/OSX/xcode/shivah/Shivah-Info.plist
+++ b/OSX/xcode/shivah/Shivah-Info.plist
@@ -24,6 +24,8 @@
 	<string>1.1</string>
 	<key>LSApplicationCategoryType</key>
 	<string>public.app-category.adventure-games</string>
+	<key>NSHighResolutionCapable</key>
+	<true/>
 	<key>UIStatusBarHidden</key>
 	<true/>
 </dict>
