--- a/Engine/Makefile-defs.linux
+++ b/Engine/Makefile-defs.linux
@@ -1,12 +1,15 @@
 INCDIR = ../Engine ../Common ../Common/libinclude ../Plugins
-LIBDIR =
+INCDIR += /usr/local/include
+LIBDIR = /usr/local/lib
 CFLAGS := -O2 -g -fsigned-char -Wfatal-errors -DNDEBUG -DAGS_RUNTIME_PATCH_ALLEGRO -DAGS_HAS_CD_AUDIO -DAGS_CASE_SENSITIVE_FILESYSTEM -DALLEGRO_STATICLINK -DLINUX_VERSION -DDISABLE_MPEG_AUDIO -DBUILTIN_PLUGINS -DRTLD_NEXT $(shell pkg-config --cflags freetype2) $(CFLAGS)
+CFLAGS += $(shell pkg-config --cflags sdl2)
 CXXFLAGS := -fno-rtti -Wno-write-strings $(CXXFLAGS)
 LIBS := -rdynamic -laldmb -ldumb -Wl,-Bdynamic
-LIBS += $(shell pkg-config --libs allegro)
+LIBS += -lalleg-debug
 LIBS += $(shell pkg-config --libs x11)
 LIBS += $(shell pkg-config --libs ogg)
 LIBS += $(shell pkg-config --libs theora)
+LIBS += $(shell pkg-config --libs sdl2) 
 
 ifeq ($(USE_TREMOR), 1)
   LIBS += -lvorbisidec
