--- a/Engine/CMakeLists.txt
+++ b/Engine/CMakeLists.txt
@@ -388,28 +388,8 @@ target_sources(engine
     media/audio/audio_system.h
     media/audio/audiodefines.h
     media/audio/audiointernaldefs.h
-    media/audio/clip_mydumbmod.cpp
-    media/audio/clip_mydumbmod.h
-    media/audio/clip_myjgmod.cpp
-    media/audio/clip_myjgmod.h
-    media/audio/clip_mymidi.cpp
-    media/audio/clip_mymidi.h
-    media/audio/clip_mymp3.cpp
-    media/audio/clip_mymp3.h
-    media/audio/clip_myogg.cpp
-    media/audio/clip_myogg.h
-    media/audio/clip_mystaticmp3.cpp
-    media/audio/clip_mystaticmp3.h
-    media/audio/clip_mystaticogg.cpp
-    media/audio/clip_mystaticogg.h
-    media/audio/clip_mywave.cpp
-    media/audio/clip_mywave.h
     media/audio/queuedaudioitem.cpp
     media/audio/queuedaudioitem.h
-    media/audio/sound.cpp
-    media/audio/sound.h
-    media/audio/soundcache.cpp
-    media/audio/soundcache.h
     media/audio/soundclip.cpp
     media/audio/soundclip.h
     media/video/VMR9Graph.h
@@ -491,6 +471,20 @@ target_sources(engine
     platform/android/acpland.cpp
 
     platform/ios/acplios.cpp
+
+    gfx/ali3d_sdl_renderer.cpp
+    gfx/ali3d_sdl_renderer.h
+    gfx/gfxfilter_sdl_renderer.cpp
+    gfx/gfxfilter_sdl_renderer.h
+    gfx/ogl_headers.h
+    media/audio/audio_core.cpp
+    media/audio/audio_core.h
+    media/audio/clip_openal.cpp
+    media/audio/clip_openal.h
+    util/library_sdl2.h
+
+    platform/linux/binreloc.c
+    platform/linux/binreloc.h
 )
 
 if(MACOS)
@@ -561,7 +555,14 @@ target_link_libraries(engine PUBLIC
     AlOgg::AlOgg 
     HQ2X::hq2x
     Cda::Cda
+    SDL2_sound-static
 )
+
+if (MACOS)
+    target_link_libraries(engine PUBLIC ${OPENAL_FRAMEWORK})
+else()
+    target_link_libraries(engine PUBLIC OpenAL::OpenAL)
+endif()
 
 # common has a circular dependency on engine
 target_link_libraries(common PUBLIC engine)
@@ -604,10 +605,10 @@ target_include_directories(ags PRIVATE .)
 
 target_sources(ags
     PRIVATE
-    main/main_allegro.cpp
+    main/main_sdl2.cpp
 )
 
-target_link_libraries(ags PRIVATE engine)
+target_link_libraries(ags PRIVATE engine SDL2::SDL2main)
 
 if (LINUX)
     # We may override `allegro_icon` and `load_midi_pf` depending on the version
@@ -642,10 +643,10 @@ if (MACOS)
 
     target_sources(ags-app
         PRIVATE
-        main/main_allegro.cpp
+        main/main_sdl2.cpp
     )
 
-    target_link_libraries(ags-app PRIVATE engine)
+    target_link_libraries(ags-app PRIVATE engine SDL2::SDL2main)
 
     set_target_properties(ags-app PROPERTIES
         RUNTIME_OUTPUT_NAME AGS
