--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,5 @@
+
+# https://gitlab.kitware.com/cmake/community/wikis/doc/cmake/Life-Cycle-Considerations
 cmake_minimum_required(VERSION 3.13..3.14)
 
 set(CMAKE_USER_MAKE_RULES_OVERRIDE ${CMAKE_CURRENT_SOURCE_DIR}/CMake/c_flag_overrides.cmake)
@@ -110,7 +112,12 @@ elseif (LINUX)
     find_package(X11)
 endif()
 
-include(FetchAllegro)
+include(FindOpenALAlias)
+
+find_package(SDL2)
+include(FindSdlSound)
+
+include(FetchAllegroSDL2)
 include(FetchOgg)
 include(FetchVorbis)
 include(FetchTheora)
