--- a/.gitignore
+++ b/.gitignore
@@ -135,3 +135,9 @@ libsrc/*.zip
 # NuGet v3's project.json files produces more ignorable files
 *.nuget.props
 *.nuget.targets
+
+\.DS_Store
+
+game_files
+build
+build-xcode
