apeg: Strip and port to use OpenAL

--- a/Engine/libsrc/apeg-1.2.1/CMakeLists.txt
+++ b/Engine/libsrc/apeg-1.2.1/CMakeLists.txt
@@ -36,7 +36,7 @@ target_sources(apeg
     # audio/vbrhead.c
 )
 
-target_compile_definitions(apeg PUBLIC DISABLE_MPEG_AUDIO)
+target_compile_definitions(apeg PRIVATE DISABLE_MPEG_AUDIO)
 
 target_link_libraries(apeg PUBLIC Allegro::Allegro Ogg::Ogg Vorbis::Vorbis Vorbis::VorbisFile Theora::TheoraDecoder)
 
