--- a/Engine/Makefile-defs.linux
+++ b/Engine/Makefile-defs.linux
@@ -4,18 +4,21 @@ USE_MIDI_PATCH = 1
 FT_CFLAGS := $(shell pkg-config --cflags freetype2)
 FT_LDFLAGS := $(shell pkg-config --libs freetype2)
 
-INCDIR = ../Engine ../Common ../Common/libinclude ../Plugins ../Engine/libsrc/glad/include
-LIBDIR =
+INCDIR = ../Engine ../Common ../Common/libinclude ../Plugins ../Engine/libsrc/glad/include ./opt-$(shell uname)/include
+LIBDIR = ./opt-$(shell uname)/lib
 
 CFLAGS := -O2 -g \
     -fsigned-char -fno-strict-aliasing -fwrapv \
     -Wunused-result \
     -Wno-unused-value  \
-    -Werror=write-strings -Werror=format-security -Werror=implicit-function-declaration \
+    -Werror=write-strings -Werror=format-security -Werror=implicit-function-declaration -Werror=return-type \
     -DNDEBUG \
     -DALLEGRO_STATICLINK -DALLEGRO_NO_COMPATIBILITY -DALLEGRO_NO_FIX_ALIASES -DALLEGRO_NO_FIX_CLASS \
     -DLINUX_VERSION -DBUILTIN_PLUGINS -DHAVE_FSEEKO -DDISABLE_MPEG_AUDIO -DAGS_CASE_SENSITIVE_FILESYSTEM -DAGS_HAS_CD_AUDIO -DAGS_RUNTIME_PATCH_ALLEGRO \
     -D_FILE_OFFSET_BITS=64 -DRTLD_NEXT \
+    -DALLEGRO_NO_MAGIC_MAIN \
+    $(shell pkg-config openal --cflags) \
+    $(shell pkg-config sdl2 --cflags)  \
     $(FT_CFLAGS) $(CFLAGS)
 
 CXXFLAGS := -std=c++11 -Werror=delete-non-virtual-dtor $(CXXFLAGS)
@@ -26,6 +29,9 @@ LIBS += $(shell pkg-config --libs allegro)
 LIBS += $(shell pkg-config --libs x11)
 LIBS += $(shell pkg-config --libs ogg)
 LIBS += $(shell pkg-config --libs theora)
+LIBS += $(shell pkg-config --libs openal)
+LIBS += $(shell pkg-config --libs sdl2)
+LIBS += -Wl,--push-state,-Bstatic -lSDL2_sound -Wl,--pop-state
 
 ifeq ($(USE_TREMOR), 1)
   LIBS += -lvorbisidec
