--- a/Solutions/Engine.App/Engine.App.vcxproj.filters
+++ b/Solutions/Engine.App/Engine.App.vcxproj.filters
@@ -642,37 +642,7 @@
     <ClCompile Include="..\..\Engine\media\audio\audio.cpp">
       <Filter>Source Files\media\audio</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\Engine\media\audio\clip_mydumbmod.cpp">
-      <Filter>Source Files\media\audio</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Engine\media\audio\clip_myjgmod.cpp">
-      <Filter>Source Files\media\audio</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Engine\media\audio\clip_mymidi.cpp">
-      <Filter>Source Files\media\audio</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Engine\media\audio\clip_mymp3.cpp">
-      <Filter>Source Files\media\audio</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Engine\media\audio\clip_myogg.cpp">
-      <Filter>Source Files\media\audio</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Engine\media\audio\clip_mystaticmp3.cpp">
-      <Filter>Source Files\media\audio</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Engine\media\audio\clip_mystaticogg.cpp">
-      <Filter>Source Files\media\audio</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Engine\media\audio\clip_mywave.cpp">
-      <Filter>Source Files\media\audio</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\Engine\media\audio\queuedaudioitem.cpp">
-      <Filter>Source Files\media\audio</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Engine\media\audio\sound.cpp">
-      <Filter>Source Files\media\audio</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Engine\media\audio\soundcache.cpp">
       <Filter>Source Files\media\audio</Filter>
     </ClCompile>
     <ClCompile Include="..\..\Engine\media\audio\soundclip.cpp">
@@ -1001,6 +971,14 @@
     </ClCompile>
     <ClCompile Include="..\..\Engine\libsrc\glad\src\glad_wgl.c">
       <Filter>Library Sources\glad</Filter>
+    <ClCompile Include="..\..\Engine\media\audio\audio_core.cpp">
+      <Filter>Source Files\media\audio</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Engine\media\audio\clip_openal.cpp">
+      <Filter>Source Files\media\audio</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Engine\libsrc\openal-soft-1.19.1\examples\common\alhelpers.c">
+      <Filter>Source Files\media\audio</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1557,9 +1535,6 @@
       <Filter>Header Files\media\audio</Filter>
     </ClInclude>
     <ClInclude Include="..\..\Engine\media\audio\queuedaudioitem.h">
-      <Filter>Header Files\media\audio</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\Engine\media\audio\sound.h">
       <Filter>Header Files\media\audio</Filter>
     </ClInclude>
     <ClInclude Include="..\..\Engine\media\audio\soundcache.h">
