assets: simple background asset loader
- engine: don't precache character view
- audio/syncdata: use asset loader
- fonts: stream in fonts while processing them
- spritecache: load views in background
- views: load loops in background
- audiocore: wait for sample to be loaded

--- a/Common/CMakeLists.txt
+++ b/Common/CMakeLists.txt
@@ -145,6 +145,9 @@ target_sources(common
     util/version.h
     util/wgt2allg.cpp
     util/wgt2allg.h
+
+	util/asset_loader.h
+	util/asset_loader.cpp
 )
 
 target_link_libraries(common 
